--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amazon Landing Clone</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+    href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -44,7 +44,7 @@
             <a class="nav-link" href="#">Carrito</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0 formNav">
           <input
             class="form-control mr-sm-2"
             type="search"
