--- a/index.html
+++ b/index.html
@@ -11,197 +11,257 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <img src="images/amazon-logo.png" alt="Amazon Logo" width="120" />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Ofertas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Cuenta y Listas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Carrito</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0 formNav">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Buscar"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Buscar
-          </button>
-        </form>
-      </div>
-    </nav>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          <img src="images/amazon-logo.png" alt="Amazon Logo" width="120" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cuenta y Listas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Carrito</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0 formNav">
+            <input
+              class="form-control mr-sm-2"
+              type="search"
+              placeholder="Buscar"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+              Buscar
+            </button>
+          </form>
+        </div>
+      </nav>
+    </header>
 
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <ol class="carousel-indicators">
-        <li
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="0"
-          class="active"
-        ></li>
-        <li
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="1"
-        ></li>
-        <li
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="2"
-        ></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="images/slide1.png"
-            alt="First slide"
-          />
+    <main>
+      <section id="carousel">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <ol class="carousel-indicators">
+            <li
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+            ></li>
+            <li
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+            ></li>
+            <li
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+            ></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                class="d-block w-100"
+                src="images/slide1.png"
+                alt="First slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="images/slide2.png"
+                alt="Second slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="images/slide3.png"
+                alt="Third slide"
+              />
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#carouselExampleIndicators"
+            role="button"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#carouselExampleIndicators"
+            role="button"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="images/slide2.png"
-            alt="Second slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="images/slide3.png"
-            alt="Third slide"
-          />
-        </div>
-      </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+      </section>
 
-    <div class="container my-4">
-      <h2>Productos Destacados</h2>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="card">
-            <img
-              class="card-img-top"
-              src="images/product1.png"
-              alt="Producto 1"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Producto 1</h5>
-              <p class="card-text">$10.00</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+      <section id="featured-products" class="container my-4">
+        <h2>Productos Destacados</h2>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="images/product1.png"
+                alt="Producto 1"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Producto 1</h5>
+                <p class="card-text">$10.00</p>
+                <a href="#" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="images/product2.png"
+                alt="Producto 2"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Producto 2</h5>
+                <p class="card-text">$20.00</p>
+                <a href="#" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="images/product3.png"
+                alt="Producto 3"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Producto 3</h5>
+                <p class="card-text">$30.00</p>
+                <a href="#" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="images/product4.png"
+                alt="Producto 4"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Producto 4</h5>
+                <p class="card-text">$40.00</p>
+                <a href="#" class="btn btn-primary">Ver más</a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img
-              class="card-img-top"
-              src="images/product2.png"
-              alt="Producto 2"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Producto 2</h5>
-              <p class="card-text">$20.00</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img
-              class="card-img-top"
-              src="images/product3.png"
-              alt="Producto 3"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Producto 3</h5>
-              <p class="card-text">$30.00</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img
-              class="card-img-top"
-              src="images/product4.png"
-              alt="Producto 4"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Producto 4</h5>
-              <p class="card-text">$40.00</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+      </section>
 
-    <div class="container my-4">
-      <h2>Ofertas del Día</h2>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="images/offer1.png" alt="Oferta 1" />
-            <div class="card-body">
-              <h5 class="card-title">Oferta 1</h5>
-              <p class="card-text"><del>$50.00</del> $25.00</p>
-              <p id="offerCountdown1" class="text-danger">
-                ¡Oferta termina en 3h 12m!
-              </p>
-              <a href="#" class="btn btn-danger">Comprar ahora</a>
+      <section id="daily-deals" class="container my-4">
+        <h2>Ofertas del Día</h2>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card">
+              <img class="card-img-top" src="images/offer1.png" alt="Oferta 1" />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Oferta 1</h5>
+                <p class="card-text">
+                  <del>$50.00</del> <span class="text-success">$25.00</span>
+                </p>
+                <p id="offerCountdown1" class="countdown text-danger mt-auto">
+                  ¡Oferta termina en 3h 12m!
+                </p>
+                <a href="#" class="btn btn-danger mt-2">Comprar ahora</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img class="card-img-top" src="images/offer1.png" alt="Oferta 2" />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Oferta 2</h5>
+                <p class="card-text">
+                  <del>$50.00</del> <span class="text-success">$25.00</span>
+                </p>
+                <p id="offerCountdown2" class="countdown text-danger mt-auto">
+                  ¡Oferta termina en 3h 12m!
+                </p>
+                <a href="#" class="btn btn-danger mt-2">Comprar ahora</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img class="card-img-top" src="images/offer1.png" alt="Oferta 3" />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Oferta 3</h5>
+                <p class="card-text">
+                  <del>$50.00</del> <span class="text-success">$25.00</span>
+                </p>
+                <p id="offerCountdown3" class="countdown text-danger mt-auto">
+                  ¡Oferta termina en 3h 12m!
+                </p>
+                <a href="#" class="btn btn-danger mt-2">Comprar ahora</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img class="card-img-top" src="images/offer1.png" alt="Oferta 4" />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Oferta 4</h5>
+                <p class="card-text">
+                  <del>$50.00</del> <span class="text-success">$25.00</span>
+                </p>
+                <p id="offerCountdown4" class="countdown text-danger mt-auto">
+                  ¡Oferta termina en 3h 12m!
+                </p>
+                <a href="#" class="btn btn-danger mt-2">Comprar ahora</a>
+              </div>
             </div>
           </div>
         </div>
-        <!-- Repite para más ofertas -->
+      </section>
+      
+      
+    </main>
+
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Amazon Clone. Todos los derechos reservados.</p>
       </div>
-    </div>
+    </footer>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
