--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amazon Landing Clone</title>
-    <link
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="dist/css/styles.min.css" />
+    <title>Amazon Landing Clone - Productos y Ofertas</title>
+    <meta name="description" content="Descubre las mejores ofertas del día y productos destacados en nuestra página de Amazon Landing Clone. Compra productos a precios inigualables con descuentos exclusivos." />
+    <meta name="keywords" content="Amazon, ofertas, productos, landing page, clone, e-commerce" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Tu Nombre" />
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="preload" href="dist/css/styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript><link rel="stylesheet" href="dist/css/styles.min.css"></noscript>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-          <img src="images/amazon-logo.png" alt="Amazon Logo" width="100" />
+          <img src="images/amazon-logo.png" alt="Logotipo de Amazon" width="100" />
         </a>
         <button
           class="navbar-toggler"
@@ -23,7 +25,7 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
+          aria-label="Alternar navegación"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,12 +47,12 @@
               <a class="nav-link" href="#">Carrito</a>
             </li>
           </ul>
-          <form class="d-flex mt-3 mt-lg-0">
+          <form class="d-flex mt-3 mt-lg-0 formNav" role="search">
             <input
               class="form-control me-2"
               type="search"
-              placeholder="Buscar"
-              aria-label="Buscar"
+              placeholder="Buscar productos"
+              aria-label="Buscar productos"
             />
             <button class="btn btn-outline-success" type="submit">
               Buscar
@@ -72,14 +74,17 @@
               data-bs-target="#carouselExampleIndicators"
               data-bs-slide-to="0"
               class="active"
+              aria-label="Ver primer slide"
             ></li>
             <li
               data-bs-target="#carouselExampleIndicators"
               data-bs-slide-to="1"
+              aria-label="Ver segundo slide"
             ></li>
             <li
               data-bs-target="#carouselExampleIndicators"
               data-bs-slide-to="2"
+              aria-label="Ver tercer slide"
             ></li>
           </ol>
           <div class="carousel-inner">
@@ -87,7 +92,7 @@
               <img
                 class="d-block w-100"
                 src="images/slide1.png"
-                alt="First slide"
+                alt="Imagen del primer slide"
                 loading="lazy"
               />
             </div>
@@ -95,7 +100,7 @@
               <img
                 class="d-block w-100"
                 src="images/slide2.png"
-                alt="Second slide"
+                alt="Imagen del segundo slide"
                 loading="lazy"
               />
             </div>
@@ -103,7 +108,7 @@
               <img
                 class="d-block w-100"
                 src="images/slide3.png"
-                alt="Third slide"
+                alt="Imagen del tercer slide"
                 loading="lazy"
               />
             </div>
@@ -113,18 +118,20 @@
             href="#carouselExampleIndicators"
             role="button"
             data-bs-slide="prev"
+            aria-label="Slide anterior"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+            <span class="visually-hidden">Anterior</span>
           </a>
           <a
             class="carousel-control-next"
             href="#carouselExampleIndicators"
             role="button"
             data-bs-slide="next"
+            aria-label="Siguiente slide"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+            <span class="visually-hidden">Siguiente</span>
           </a>
         </div>
       </section>
@@ -137,13 +144,13 @@
               <img
                 class="card-img-top"
                 src="images/product1.png"
-                alt="Producto 1"
+                alt="Imagen del Producto 1, precio $10.00"
                 loading="lazy"
               />
               <div class="card-body">
                 <h5 class="card-title">Producto 1</h5>
                 <p class="card-text">$10.00</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn btn-primary">Ver más detalles</a>
               </div>
             </div>
           </div>
@@ -152,13 +159,13 @@
               <img
                 class="card-img-top"
                 src="images/product2.png"
-                alt="Producto 2"
+                alt="Imagen del Producto 2, precio $20.00"
                 loading="lazy"
               />
               <div class="card-body">
                 <h5 class="card-title">Producto 2</h5>
                 <p class="card-text">$20.00</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn btn-primary">Ver más detalles</a>
               </div>
             </div>
           </div>
@@ -167,13 +174,13 @@
               <img
                 class="card-img-top"
                 src="images/product3.png"
-                alt="Producto 3"
+                alt="Imagen del Producto 3, precio $30.00"
                 loading="lazy"
               />
               <div class="card-body">
                 <h5 class="card-title">Producto 3</h5>
                 <p class="card-text">$30.00</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn btn-primary">Ver más detalles</a>
               </div>
             </div>
           </div>
@@ -182,13 +189,13 @@
               <img
                 class="card-img-top"
                 src="images/product4.png"
-                alt="Producto 4"
+                alt="Imagen del Producto 4, precio $40.00"
                 loading="lazy"
               />
               <div class="card-body">
                 <h5 class="card-title">Producto 4</h5>
                 <p class="card-text">$40.00</p>
-                <a href="#" class="btn btn-primary">Ver más</a>
+                <a href="#" class="btn btn-primary">Ver más detalles</a>
               </div>
             </div>
           </div>
@@ -203,7 +210,7 @@
               <img
                 class="card-img-top"
                 src="images/offer1.png"
-                alt="Oferta 1"
+                alt="Imagen de la oferta 1, precio $25.00"
                 loading="lazy"
               />
               <div class="card-body d-flex flex-column">
@@ -223,7 +230,7 @@
               <img
                 class="card-img-top"
                 src="images/offer1.png"
-                alt="Oferta 2"
+                alt="Imagen de la oferta 2, precio $25.00"
                 loading="lazy"
               />
               <div class="card-body d-flex flex-column">
@@ -243,7 +250,7 @@
               <img
                 class="card-img-top"
                 src="images/offer1.png"
-                alt="Oferta 3"
+                alt="Imagen de la oferta 3, precio $25.00"
                 loading="lazy"
               />
               <div class="card-body d-flex flex-column">
@@ -263,7 +270,7 @@
               <img
                 class="card-img-top"
                 src="images/offer1.png"
-                alt="Oferta 4"
+                alt="Imagen de la oferta 4, precio $25.00"
                 loading="lazy"
               />
               <div class="card-body d-flex flex-column">
@@ -285,6 +292,13 @@
     <footer>
       <div class="container">
         <p>&copy; 2024 Amazon Clone. Todos los derechos reservados.</p>
+        <nav aria-label="Enlaces de pie de página">
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="#">Política de privacidad</a></li>
+            <li class="list-inline-item"><a href="#">Términos del servicio</a></li>
+            <li class="list-inline-item"><a href="#">Contacto</a></li>
+          </ul>
+        </nav>
       </div>
     </footer>
 
