--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <meta name="keywords" content="Amazon, ofertas, productos, landing page, clone, e-commerce" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Tu Nombre" />
-    <!-- Carga Bootstrap desde dist -->
+    <!-- Carga Bootstrap desde node_modules -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Carga el CSS minificado desde dist -->
-    <link rel="preload" href="/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-    <noscript><link rel="stylesheet" href="/css/styles.min.css"></noscript>
+    <!-- Carga el CSS directamente -->
+    <link href="/css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -307,6 +306,6 @@
     <!-- Carga Bootstrap desde dist -->
     <script src="/dist/js/bootstrap.bundle.min.js" defer></script>
     <!-- Carga el JS minificado desde dist -->
-    <script src="/js/scripts.js" defer></script>
+    <script src="/dist/js/scripts.min.js" defer></script>
   </body>
 </html>
