--- a/index.html
+++ b/index.html
@@ -302,10 +302,6 @@
         </nav>
       </div>
     </footer>
-
-    <!-- Carga Bootstrap desde dist -->
-    <script src="/dist/js/bootstrap.bundle.min.js" defer></script>
-    <!-- Carga el JS minificado desde dist -->
-    <script src="/dist/js/scripts.min.js" defer></script>
+    <script src="/js/scripts.js" defer></script>
   </body>
 </html>
