--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Tu Nombre" />
     <!-- Carga Bootstrap desde node_modules -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Carga el CSS directamente -->
+    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- Carga el CSS de tu proyecto -->
     <link href="/css/styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -302,7 +303,10 @@
         </nav>
       </div>
     </footer>
-    
+
+    <!-- Carga Bootstrap desde node_modules -->
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- Carga el JS de tu proyecto -->
     <script src="/js/scripts.js" defer></script>
   </body>
 </html>
